- Rename root package.json - Fix pipeline problems with rollup optional dependencies - Lower node version to match pipeline

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "root",
+  "name": "@adobe/target-cdn-experimentation",
   "version": "0.0.1",
   "description": "Adobe CDN based experimentation",
   "keywords": [],
   "type": "module",
   "engines": {
-    "node": ">=20",
+    "node": ">=18",
     "npm": ">=10"
   },
   "private": true,
