--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,8 +23,15 @@ jobs:
         node-version: '18'
         registry-url: 'https://registry.npmjs.org'
 
+    - name: Clean npm cache and node_modules
+      run: |
+        rm -rf node_modules
+        npm cache clean --force
+
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci
+        npm rebuild @rollup/rollup-linux-x64-gnu
 
     - name: Build packages
       run: npm run build --workspaces
