--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
 
     - name: Clean npm cache and node_modules
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci
-        npm rebuild @rollup/rollup-linux-x64-gnu
+        npm install @rollup/rollup-linux-x64-gnu --save-dev
 
     - name: Build packages
       run: npm run build --workspaces
