--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -39,7 +39,6 @@ jobs:
     - name: Configure npm for publishing
       run: |
         npm config set //registry.npmjs.org/:_authToken ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        npm config set //registry.npmjs.org/:always-auth true
 
     - name: Publish NodeJS SDK
       uses: pascalgn/npm-publish-action@1.3.9
@@ -53,6 +52,9 @@ jobs:
         commit_pattern: "^Release (\\S+)"
       env:
         NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
 
     - name: Publish Akamai SDK
       uses: pascalgn/npm-publish-action@1.3.9
@@ -66,3 +68,6 @@ jobs:
         commit_pattern: "^Release (\\S+)"
       env:
         NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
