--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -36,9 +36,11 @@ jobs:
     - name: Build packages
       run: npm run build --workspaces
 
-    - name: Configure npm for publishing
+    - name: Configure NPM for changeset publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
       run: |
-        npm config set //registry.npmjs.org/:_authToken ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.ADOBE_BOT_NPM_TOKEN }}" > ~/.npmrc
 
     - name: Publish NodeJS SDK
       uses: pascalgn/npm-publish-action@1.3.9
@@ -46,15 +48,13 @@ jobs:
         workspace: "packages/sdk-nodejs"
         publish_command: "npm"
         publish_args: "--non-interactive --access public"
-        create_tag: "true"
-        tag_name: "v%s"
-        tag_message: "v%s"
+        create_tag: "false"
         commit_pattern: "^Release (\\S+)"
       env:
         NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
         NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish Akamai SDK
       uses: pascalgn/npm-publish-action@1.3.9
@@ -62,12 +62,10 @@ jobs:
         workspace: "packages/sdk-akamai"
         publish_command: "npm"
         publish_args: "--non-interactive --access public"
-        create_tag: "true"
-        tag_name: "v%s"
-        tag_message: "v%s"
+        create_tag: "false"
         commit_pattern: "^Release (\\S+)"
       env:
         NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
         NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
