--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,29 +43,23 @@ jobs:
         echo "//registry.npmjs.org/:_authToken=${{ secrets.ADOBE_BOT_NPM_TOKEN }}" > ~/.npmrc
 
     - name: Publish NodeJS SDK
-      uses: pascalgn/npm-publish-action@1.3.9
+      uses: "jsdevtools/npm-publish@v3"
       with:
-        workspace: "packages/sdk-nodejs"
-        publish_command: "npm"
-        publish_args: "--non-interactive --access public"
-        create_tag: "false"
-        commit_pattern: "^Release (\\S+)"
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        package: packages/sdk-nodejs
+        access: public
+        token: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        check-version: true
+        tag: latest
+        dry-run: false
+        workspace: packages/sdk-nodejs
 
     - name: Publish Akamai SDK
-      uses: pascalgn/npm-publish-action@1.3.9
+      uses: "jsdevtools/npm-publish@v3"
       with:
-        workspace: "packages/sdk-akamai"
-        publish_command: "npm"
-        publish_args: "--non-interactive --access public"
-        create_tag: "false"
-        commit_pattern: "^Release (\\S+)"
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        NPM_TOKEN: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        package: packages/sdk-akamai
+        access: public
+        token: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+        check-version: true
+        tag: latest
+        dry-run: false
+        workspace: packages/sdk-akamai
