--- a/packages/sdk-nodejs/package.json
+++ b/packages/sdk-nodejs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/target-cdn-experimentation-nodejs-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Contains the build system and files specific to the NodeJS platform.",
   "type": "module",
   "main": "lib/index.cjs.js",
@@ -29,6 +29,9 @@
   "jest": {
     "transform": {
     }
+  },
+  "dependencies": {
+    "@adobe/target-cdn-experimentation-core": "^0.0.1"
   },
   "author": "",
   "license": "Apache-2.0"
