--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,13 +2,13 @@
   "./*.{cjs,mjs,js,jsx}": [
     "eslint --cache --fix . --ignore-pattern '**/dist/**'"
   ],
-  "./{packages}/**/*.{cjs,mjs,js,jsx}": [
+  "./packages/**/*.{cjs,mjs,js,jsx}": [
     "eslint --cache --fix .  --ignore-pattern '**/dist/**'"
   ],
   "./*.{html,js,cjs,mjs,jsx}": [
     "prettier --write"
   ],
-  "./{packages}/**/*.{html,js,cjs,mjs,jsx}": [
+  "./packages/**/*.{html,js,cjs,mjs,jsx}": [
     "prettier --write"
   ]
 }
