--- a/packages/sdk-nodejs/package.json
+++ b/packages/sdk-nodejs/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@adobe/target-cdn-experimentation-nodejs-sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Contains the build system and files specific to the NodeJS platform.",
-  "type": "module",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
-  "types": "types/index.d.ts",
+  "main": "./lib/index.cjs.js",
+  "module": "./lib/index.esm.js",
+  "types": "./types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./lib/index.esm.js",
+      "require": "./lib/index.cjs.js",
+      "types": "./types/index.d.ts"
+    }
+  },
   "files": [
     "lib",
     "types"
