--- a/packages/sdk-nodejs/package.json
+++ b/packages/sdk-nodejs/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@adobe/target-cdn-experimentation-nodejs-sdk",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Contains the build system and files specific to the NodeJS platform.",
   "main": "./lib/index.cjs.js",
   "module": "./lib/index.esm.js",
+  "type": "module",
   "types": "./types/index.d.ts",
   "exports": {
     ".": {
